fix text spacing

--- a/style.css
+++ b/style.css
@@ -15,26 +15,41 @@ body {
   font-weight: 400;
   font-style: normal;
   overflow: hidden;
+  margin: 50% 0 0 0;
+  position: relative;
 }
 
 .wrapper {
   display: flex;
   height: 100%;
-  width: 60%;
+  width: 42%;
   margin: 0 auto;
   /* z-index: 2; */
 }
 
 .scroll-text {
   color: #ffc909;
-  font-size: 3vw;
-  line-height: 1.1em;
+  font-size: 3.25vw;
+  line-height: 1.5em;
   letter-spacing: 0.09em;
   text-align: justify;
   text-justify: inter-word;
   position: relative;
+  align-items: center;
 }
 
+h1 {
+  font-size: 5vw;
+  text-align: center;
+  text-justify: inter-word;
+  line-height: 1.25em;
+}
+h2 {
+  font-size: 3.5vw;
+  line-height: 1.25em;
+  text-align: center;
+  text-justify: inter-word;
+}
 h1,
 h2 {
 }
